--- a/package.json
+++ b/package.json
@@ -22,25 +22,25 @@
     "browser-sync": "^2.24.4",
     "browser-sync-webpack-plugin": "^2.2.2",
     "copy-webpack-plugin": "^4.5.1",
-    "css-loader": "^0.28.11",
+    "css-loader": "^1.0.1",
     "html-loader": "^0.5.5",
-    "html-webpack-harddisk-plugin": "^0.2.0",
+    "html-webpack-harddisk-plugin": "^1.0.1",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.0",
     "node-sass": "^4.9.0",
-    "postcss-loader": "^2.1.5",
+    "postcss-loader": "^3.0.0",
     "sass-loader": "^7.0.1",
-    "style-loader": "^0.21.0",
+    "style-loader": "^0.23.1",
     "webpack": "^4.9.1",
-    "webpack-cli": "^2.1.4",
-    "webpack-dev-server": "^3.1.4"
-  },
-  "dependencies": {
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.4",
     "@babel/core": "^7.0.0-beta.49",
     "@babel/plugin-syntax-dynamic-import": "^7.0.0-beta.49",
     "@babel/preset-env": "^7.0.0-beta.49",
     "babel-loader": "^8.0.0-beta.3",
-    "bootstrap": "^4.1.1",
     "reload-html-webpack-plugin": "^0.1.2"
+  },
+  "dependencies": {
+    "bootstrap": "^4.1.1"
   }
 }
